# maths-revision-tool

./: .gitignore  Cargo.toml  README.md  index.html  styles.css  utils.css
db_manager/: Cargo.toml
db_manager/src/: commands.rs  lib.rs  requests.rs
shared/: Cargo.toml
shared/src/: lib.rs  questions.rs  requests.rs  responses.rs
src/: commands.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src/app/: admin.rs  browser.rs  creator.rs  dash.rs  login.rs  mod.rs  quiz.rs  register.rs  review.rs
src/components/: administration.rs  inputs.rs  layout.rs  mod.rs  questions.rs  tabs.rs  theme_ctx.rs  user_ctx.rs
