[package]
name = "maths-revision-tool-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.31"
web-sys = { version = "0.3.68", features = ["HtmlSelectElement"] }
yew = { version = "0.21", features = ["csr"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = [
    "tauri",
    "dialog",
] }
yew-router = { version = "0.18" }
shared = { path = "shared" }
wasm-logger = "0.2.0"
log = "0.4.20"
yew-autoprops = "0.4.1"
stylist = { version = "0.13", features = ["yew", "yew_integration"] }
serde = "1.0.197"

[workspace]
members = ["src-tauri", "shared"]
